// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RestaurantList /> When the neighbourhood has no restaurants matches the snapshot 1`] = `
<RestaurantList
  neighbourhood={
    Object {
      "restaurants": Array [],
      "title": "No food for me :(",
    }
  }
>
  <Container>
    <div
      className="undefined "
    >
      <Spacer
        height={40}
      >
        <div
          style={
            Object {
              "height": 40,
            }
          }
        />
      </Spacer>
      <Component
        colour="#828585"
        fontSize={16}
      >
        <p
          style={
            Object {
              "color": "#828585",
              "fontSize": 16,
              "fontWeight": undefined,
              "lineHeight": undefined,
              "marginLeft": undefined,
              "marginRight": undefined,
              "opacity": undefined,
            }
          }
        >
          0
           Restaurants
        </p>
      </Component>
      <Spacer
        height={40}
      >
        <div
          style={
            Object {
              "height": 40,
            }
          }
        />
      </Spacer>
      <CardList>
        <div />
      </CardList>
    </div>
  </Container>
</RestaurantList>
`;

exports[`<RestaurantList /> When the neighbourhood has restaurants matches the snapshot 1`] = `
<RestaurantList
  neighbourhood={
    Object {
      "restaurants": Array [
        Object {
          "id": "123",
          "imageUrl": "http://placehold.it/240",
          "name": "One",
          "price": 1,
          "tags": Array [],
        },
        Object {
          "id": "234",
          "imageUrl": "http://placehold.it/240",
          "name": "Two",
          "price": 2,
          "tags": Array [],
        },
      ],
      "title": "Shoreditch",
    }
  }
>
  <Container>
    <div
      className="undefined "
    >
      <Spacer
        height={40}
      >
        <div
          style={
            Object {
              "height": 40,
            }
          }
        />
      </Spacer>
      <Component
        colour="#828585"
        fontSize={16}
      >
        <p
          style={
            Object {
              "color": "#828585",
              "fontSize": 16,
              "fontWeight": undefined,
              "lineHeight": undefined,
              "marginLeft": undefined,
              "marginRight": undefined,
              "opacity": undefined,
            }
          }
        >
          2
           Restaurants
        </p>
      </Component>
      <Spacer
        height={40}
      >
        <div
          style={
            Object {
              "height": 40,
            }
          }
        />
      </Spacer>
      <CardList>
        <div>
          <RestaurantCard
            id="123"
            imageUrl="http://placehold.it/240"
            key="123"
            name="One"
            price={1}
            tags={Array []}
          >
            <ImageCard
              altText="One"
              imageUrl="http://placehold.it/240"
            >
              <div>
                <img
                  alt="One"
                  src="http://placehold.it/240"
                />
                <div>
                  <Spacer
                    height={8}
                  >
                    <div
                      style={
                        Object {
                          "height": 8,
                        }
                      }
                    />
                  </Spacer>
                  <Component
                    colour="#2e33333"
                    fontSize={22}
                    fontWeight={600}
                  >
                    <h1
                      style={
                        Object {
                          "color": "#2e33333",
                          "fontSize": 22,
                          "fontWeight": 600,
                          "lineHeight": undefined,
                          "marginLeft": undefined,
                          "marginRight": undefined,
                          "opacity": undefined,
                        }
                      }
                    >
                      One
                    </h1>
                  </Component>
                  <Spacer
                    height={5}
                  >
                    <div
                      style={
                        Object {
                          "height": 5,
                        }
                      }
                    />
                  </Spacer>
                  <Component
                    colour="#828585"
                    fontSize={14}
                    fontWeight={400}
                  >
                    <p
                      style={
                        Object {
                          "color": "#828585",
                          "fontSize": 14,
                          "fontWeight": 400,
                          "lineHeight": undefined,
                          "marginLeft": undefined,
                          "marginRight": undefined,
                          "opacity": undefined,
                        }
                      }
                    >
                       
                       
                      £
                    </p>
                  </Component>
                </div>
              </div>
            </ImageCard>
          </RestaurantCard>
          <RestaurantCard
            id="234"
            imageUrl="http://placehold.it/240"
            key="234"
            name="Two"
            price={2}
            tags={Array []}
          >
            <ImageCard
              altText="Two"
              imageUrl="http://placehold.it/240"
            >
              <div>
                <img
                  alt="Two"
                  src="http://placehold.it/240"
                />
                <div>
                  <Spacer
                    height={8}
                  >
                    <div
                      style={
                        Object {
                          "height": 8,
                        }
                      }
                    />
                  </Spacer>
                  <Component
                    colour="#2e33333"
                    fontSize={22}
                    fontWeight={600}
                  >
                    <h1
                      style={
                        Object {
                          "color": "#2e33333",
                          "fontSize": 22,
                          "fontWeight": 600,
                          "lineHeight": undefined,
                          "marginLeft": undefined,
                          "marginRight": undefined,
                          "opacity": undefined,
                        }
                      }
                    >
                      Two
                    </h1>
                  </Component>
                  <Spacer
                    height={5}
                  >
                    <div
                      style={
                        Object {
                          "height": 5,
                        }
                      }
                    />
                  </Spacer>
                  <Component
                    colour="#828585"
                    fontSize={14}
                    fontWeight={400}
                  >
                    <p
                      style={
                        Object {
                          "color": "#828585",
                          "fontSize": 14,
                          "fontWeight": 400,
                          "lineHeight": undefined,
                          "marginLeft": undefined,
                          "marginRight": undefined,
                          "opacity": undefined,
                        }
                      }
                    >
                       
                       
                      ££
                    </p>
                  </Component>
                </div>
              </div>
            </ImageCard>
          </RestaurantCard>
        </div>
      </CardList>
    </div>
  </Container>
</RestaurantList>
`;
